<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="EditCashEntryBinding">

        <import type="android.view.View" />
        <import type="me.muhammadali.qpersonalaccounting.model.entity.Category.Type" />

        <variable
            name="vm"
            type="me.muhammadali.qpersonalaccounting.ui.cashentry.EditCashEntryViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true">

        <include layout="@layout/layout_appbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/rbExpense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:padding="16dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="-1dp"
                        android:textAlignment="center"
                        android:checked="@{vm.type == Type.EXPENSE}"
                        android:onClick="@{v -> vm.onTypeSelect(Type.EXPENSE)}"
                        android:textColor="@color/color_radio_button_text"
                        android:background="@drawable/left_radio_button_drawable"
                        android:text="@string/expense" />

                    <RadioButton
                        android:id="@+id/rbIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:checked="@{vm.type == Type.INCOME}"
                        android:onClick="@{v -> vm.onTypeSelect(Type.INCOME)}"
                        android:layout_marginStart="-1dp"
                        android:textColor="@color/color_radio_button_text"
                        android:background="@drawable/right_radio_button_drawable"
                        android:text="@string/income" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="@={vm.entry.title}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_amount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:nextFocusForward="@id/ed_remark"
                        android:text="@={vm.entry.amount}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"
                    android:spinnerMode="dialog"
                    android:prompt="@string/choose"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCategory"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayoutCategory"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayoutCategory"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayoutCategory" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAmount">

                    <me.muhammadali.qpersonalaccounting.ui.custom.ReadOnlyTextInputEditText
                        android:id="@+id/edCashEntryCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_arrow_drop_down_dark"
                        android:inputType="none"
                        android:text="@{vm.category.name}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCategory">

                    <me.muhammadali.qpersonalaccounting.ui.custom.ReadOnlyTextInputEditText
                        android:id="@+id/edCashEntryDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_arrow_drop_down_dark"
                        android:inputType="none"
                        android:text="@{vm.entry.issueDate}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/hint_description"
                    app:layout_constraintBottom_toTopOf="@+id/btnDelete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_remark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:text="@={vm.entry.description}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    style="@style/AppTheme.DeleteButton"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{v -> vm.delete()}"
                    android:text="@string/txt_delete"
                    android:visibility="@{vm.entry.id > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout6" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>